# specks

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md
.beads/: daemon-error  issues.jsonl
.claude/: settings.local.json
.claude-plugin/: plugin.json
.claude/agents/: specks-architect.md  specks-auditor.md  specks-author.md  specks-clarifier.md  specks-committer.md  specks-critic.md  specks-director.md  specks-implementer.md  specks-interviewer.md  specks-logger.md  specks-monitor.md  specks-planner.md  specks-reviewer.md
.github/workflows/: ci.yml  release.yml
.specks/: beads-enrichment-phases.md  config.toml  phase-3-architecture-analysis.md  pr-body.md  specks-1.md  specks-10.md  specks-11.md  specks-12.md  specks-13.md  specks-14.md  specks-15.md  specks-17.md  specks-2.md  specks-3.md  specks-4-architecture-report.md  specks-4.md  specks-5.md  specks-6.md  specks-7.md  specks-8.md  specks-9.md  specks-implementation-log.md  specks-skeleton.md  step-8-3-7-5-draft.md  terminal-streaming-architecture.md
.specks/archive/: implementation-log-2025-02-12-182852.md  implementation-log-2026-02-pre.md  specks-1.md  specks-10.md  specks-11.md  specks-16-worktree-lifecycle.md  specks-5.md  specks-8.md
Formula/: specks.rb
agents/: architect-agent.md  architect.md  auditor-agent.md  author-agent.md  clarifier-agent.md  coder-agent.md  committer-agent.md  critic-agent.md  director.md  implementer-agent.md  implementer-setup-agent.md  implementer.md  integrator-agent.md  interviewer.md  logger-agent.md  planner-agent.md  planner-setup-agent.md  planner.md  reviewer-agent.md  setup-agent.md  specks-clarifier.md  specks-critic.md  specks-director.md  specks-implementer.md  specks-interviewer.md  specks-monitor.md  specks-planner.md
agents/archived/: director.md
crates/specks/: Cargo.toml  build.rs
crates/specks-core/: Cargo.toml
crates/specks-core/src/: beads.rs  config.rs  error.rs  interaction.rs  lib.rs  parser.rs  session.rs  types.rs  validator.rs  worktree.rs
crates/specks-core/tests/: beads_tests.rs  integration_tests.rs
crates/specks/src/: agent.rs  cli.rs  colors.rs  main.rs  output.rs  planning_loop.rs  share.rs  splash.rs  streaming.rs
crates/specks/src/commands/: doctor.rs  execute.rs  init.rs  list.rs  log.rs  merge.rs  mod.rs  plan.rs  session.rs  setup.rs  status.rs  step_commit.rs  step_publish.rs  validate.rs  version.rs  worktree.rs
crates/specks/src/commands/beads/: close.rs  inspect.rs  link.rs  mod.rs  pull.rs  status.rs  sync.rs  update.rs
crates/specks/src/interaction/: cli_adapter.rs  mod.rs
crates/specks/src/planning_loop/: clarifier.rs  cli_gather.rs  cli_present.rs  mod.rs  types.rs
crates/specks/tests/: agent_integration_tests.rs  beads_integration_tests.rs  cli_integration_tests.rs  worktree_integration_tests.rs
docs/: ORCHESTRATION_PATTERNS.md  beads-json-contract.md  getting-started.md
docs/tutorials/: execute-plan.md  first-speck.md  py-calc-example.md
homebrew/: specks.rb
hooks/: auto-approve-specks.sh  ensure-init.sh  hooks.json
scripts/: release.sh  update-homebrew-formula.sh
skills/architect/: SKILL.md
tests/: README.md
(+100 files in other folders)
