[workspace]
resolver = "2"
members = ["crates/specks", "crates/specks-core"]

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Regex for parsing
regex = "1"

# Directory paths
dirs = "5"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Interactive prompts and terminal UI
inquire = "0.7"
indicatif = "0.17"
owo-colors = "4"
ctrlc = "3.4"

# Internal crates
specks-core = { path = "crates/specks-core" }
