[package]
name = "specks-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for specks: parsing, validation, and types"

[lib]
name = "specks_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
