[package]
name = "specks"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "From ideas to implementation via multi-agent orchestration"

[[bin]]
name = "specks"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
regex.workspace = true
dirs.workspace = true
uuid.workspace = true
chrono.workspace = true
specks-core.workspace = true
inquire.workspace = true
indicatif.workspace = true
owo-colors.workspace = true
ctrlc.workspace = true

[dev-dependencies]
tempfile = "3"
